# DCQ

./: .dockerignore  CMakeLists.txt  Dockerfile  Readme.md  evaluate.py  main.cpp  requirements.txt  run_all.py  run_all_runall.py
dcq/: PBar.cpp  PBar.h  algorithm.cpp  algorithm.h  alpha.cpp  alpha.h  floyd_steinberg.cpp  floyd_steinberg.h  init.cpp  init.h  types.h  utils.cpp  utils.h
utils/: utils.cpp  utils.h
